tests/negative/gold/incomplete-string7-test.gold
tests/negative/incomplete-string7-test.toit:6:3: error: Unterminated string
  """"
  ^
Compilation failed
